# mups

./: README.md  pyproject.toml
.github/workflows/: run_test.yml
docs/: core-metadata-0.1.md
news/: 0d09cbea.bugfix.md
src/mups/: __init__.py  core.py  utils.py
tests/unit/: test_core.py  test_utils.py
