[project]
name = "mups"
version = "0.1.0"
description = "Mojo Ultimate Package Standard"
authors = [
    {name = "Drunkwcodes", email = "drunkwcodes@gmail.com"},
]
dependencies = [
    "packaging>=23.1",
    "tomlkit>=0.12.1",
    "mashumaro[toml]>=3.9",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.3.1",
    "pylint>=2.17.4",
    "black[jupyter]>=23.7.0",
    "ipython>=8.14.0",
    "requests>=2.31.0",
    "requests-toolbelt>=1.0.0",
    "towncrier>=23.6.0",
    "ruff>=0.0.282",
]

[tool.towncrier]
package = "mups"
package_dir = "src"
name = "MUPS"
directory = "news"
filename = "CHANGELOG.md"

[tool.ruff]
ignore = ["E712", "F401", "E501"]

# E712 [*] Comparison to `True` should be `cond is True` or `if cond:`
# F401 [*] `.core.is_valid_name` imported but unused
# E501 Line too long (442 > 88 characters)
